[UPDATE] UI changes & resolved overlapping

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -15,9 +15,9 @@ body {
 
 :root {
   --gradient-opacity: 0.8;
-  --primary-color: rgba(black, var(--gradient-opacity));
-  --secondary-color: rgba(#FFDE59 , var(--gradient-opacity));
-  --accent-color: rgba(128, 59, 239, var(--gradient-opacity));
+  --primary-color: #FDFE59;
+  --secondary-color: #FFDE59;
+  --accent-color: #FDFE59;
   // --primary-color: rgba(147, 112, 219, var(--gradient-opacity));
   // --secondary-color: rgba(138, 43, 226, var(--gradient-opacity));
   // --accent-color: rgba(180, 170, 220, var(--gradient-opacity));
